# pressio-ops

./: .buildinfo  .gitignore  CMakeLists.txt  README.md  configuration.html  genindex.html  helloworld.html  index.html  installation.html  license.html  mydefs.html  objects.inv  search.html  searchindex.js  version.txt
.doctrees/: configuration.doctree  environment.pickle  helloworld.doctree  index.doctree  installation.doctree  license.doctree  mydefs.doctree
.doctrees/components/: expressions.doctree  mpl.doctree  ops.doctree  type_traits.doctree
.github/workflows/: ci-baseline.yml  ci-kokkos.yml  ci-trilinos.yml  deploy-docs.yml
_sources/: configuration.rst.txt  installation.rst.txt
_sources/components/: mpl.rst.txt  type_traits.rst.txt
cmake/: pressioopsConfig.cmake.in  version.cmake
components/: expressions.html  mpl.html  ops.html  type_traits.html
components/expressions/: column.html  diag.html  is_expression.html  span.html  subspan.html
components/ops/: abs.html  add_to_diagonal.html  clone.html  deep_copy.html  dot.html  elementwise_multiply.html  elementwise_reciprocal.html  extent.html  fill.html  matrix_matrix_product.html  matrix_vector_product.html  min_max.html  norms.html  pow.html  resize.html  scale.html  set_zero.html  update.html
docs/: build_requirements.txt
docs/generated_docs/: .buildinfo  concepts_note.html  genindex.html  index.html  installation.html  keywords.html  license.html  mydefs.html  objects.inv  search.html  searchindex.js
docs/source/: concepts_note.rst  conf.py  configuration.rst  helloworld.rst  index.rst
examples/: hello_world.cpp
include/pressio/: expressions.hpp  macros.hpp  mpl.hpp  ops.hpp  ops_macros.hpp  type_traits.hpp
scripts/: add-sandia-license.sh  fix_headers.sh  license-template  remove-sandia-license.sh
tests/: CMakeLists.txt
tests/cmake/: .macrosForCreatingTests.cmake.~undo-tree~  .macrosForCreatingUnitTests.cmake.~undo-tree~  .options.cmake.~undo-tree~  macrosForCreatingTests.cmake  macrosForCreatingUnitTests.cmake  options.cmake  (+1 more)
(+314 files in other folders)
